# cake

./: CMakeLists.txt  README.md  build.sh
docs/: resources.md  step1.md
include/: lib.h  original.h.in
src/: lib.c  lib.cxx  main.cxx
